[gd_scene load_steps=9 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="main" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 1017.0
margin/bottom = 593.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 345.0
margin/top = 25.0
margin/right = 664.0
margin/bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "High Scores"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 345.0
margin/top = 105.0
margin/right = 401.0
margin/bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameEdit" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 105.0
margin/right = 553.0
margin/bottom = 129.0
custom_fonts/font = SubResource( 3 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label 3" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 345.0
margin/top = 153.0
margin/right = 385.0
margin/bottom = 167.0
custom_fonts/font = SubResource( 4 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreEdit" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 153.0
margin/right = 553.0
margin/bottom = 177.0
custom_fonts/font = SubResource( 3 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="AddButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 201.0
margin/right = 495.0
margin/bottom = 232.0
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add"
flat = false

[node name="ScoreList" type="ItemList" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 249.0
margin/right = 665.0
margin/bottom = 553.0
custom_fonts/font = SubResource( 6 )

[connection signal="pressed" from="Panel/AddButton" to="." method="_onAddButton"]


